tests/errors/error-in-imported-module.au
import "./error-in-imported-module-1.au";
